Initial cleanup and formatting changes

--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -1,9 +1,11 @@
 <div class="py2 post-footer">
-  <img src="{{ site.baseurl }}/images/jono.jpg" alt="Jonathon Belotti headshot" class="avatar" />
+  <img
+    src="{{ site.baseurl }}/images/ryan.jpg"
+    alt="Ryan Ward headshot"
+    class="avatar"
+  />
   <p>
     Thanks for reading, and please leave some feedback if you have the time.
   </p>
-  <p>
-    Follow me on <a href="https://github.com/thundergolfer">Github</a>.
-  </p>
+  <p>Follow me on <a href="https://github.com/ryanward-io">Github</a>.</p>
 </div>
