--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,14 +1,13 @@
 ---
 layout: default
 ---
-<div style="text-align: center;">
-  <img style="border-radius: 50%; max-width: 250px;" src="{{ page.headshot }}">
+
+<div style="text-align: center">
+  <img style="border-radius: 40%; max-width: 250px" src="{{ page.headshot }}" />
 </div>
 <div class="post">
   <header class="post-header">
     <h1 class="h2">{{ page.title }}</h1>
   </header>
-  <article class="post-content">
-  {{ content }}
-  </article>
+  <article class="post-content">{{ content }}</article>
 </div>
