--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -12,7 +12,8 @@ MIT License http://opensource.org/licenses/MIT
 
 */
 
-html, body {
+html,
+body {
   z-index: -10;
   height: auto;
   min-height: 100%;
@@ -20,6 +21,7 @@ html, body {
 
 img {
   max-width: 100%;
+  margin-top: 2em;
 }
 
 em img {
@@ -28,7 +30,7 @@ em img {
 }
 
 body {
-          box-sizing: border-box;
-     -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
 }
