--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -1,75 +1,94 @@
-
 nav ul {
-    z-index: 1001;
-    float: left;
-    padding-left: 0;
-    padding-bottom: 5%;
-    margin: 0;
-    background: $header-fg;
-    width: 100%;
-    -webkit-transform: translateY(-116%);
-    transform: translateY(-116%);
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-transition: all 0.75s ease;
-    -moz-transition: all 0.75s ease;
-    -o-transition: all 0.75s ease;
-    -ms-transition: all 0.75s ease;
-    transition: all 0.75s ease;
+  padding-left: 0;
+  width: 100%;
+  margin: 0;
+  width: 100%;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-transition: all 0.75s ease;
+  -moz-transition: all 0.75s ease;
+  -o-transition: all 0.75s ease;
+  -ms-transition: all 0.75s ease;
+  transition: all 0.75s ease;
 }
 
-nav .flexbox-parent {
-    width: 100000%;
+ul.nav {
+  background-color: #3d99ce;
+  text-align: center;
+}
+
+#main-menu li {
+  display: inline-block;
+  padding: 10px 20px;
+}
+
+#main-menu li > a {
+  text-decoration: none;
 }
 
 nav li {
-    list-style: none;
-    margin: 4vh auto;
+  list-style: none;
+  margin: 4vh auto;
+}
+
+// Reduce vertical spacing on mobile.
+@media only screen and (max-width: 600px) {
+  nav li {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
 nav .nav-underline:before {
-    bottom: 0;
-    width: 100%;
-    -webkit-transform: scaleX(1);
-    transform: scaleX(1);
+  bottom: 0;
+  width: 95%;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
 }
 
-.medium-link h2:before, nav .nav-underline:before, nav a:after {
-    content: '';
-    border-bottom: 2px solid $header-fg;
+.medium-link h2:before,
+nav .nav-underline:before,
+nav a:after {
+  content: "";
+  border-bottom: 2px solid #999;
 }
 
-nav .nav-underline:before, nav a:after {
-    position: absolute;
-    left: 0;
-    transition: .4s;
+nav .nav-underline:before,
+nav a:after {
+  position: absolute;
+  left: 0;
+  transition: 0.4s;
 }
 
 nav a {
-    position: relative;
+  position: relative;
 }
 
 nav .nav-underline:hover:before {
-    -webkit-transform: scaleX(0);
-    transform: scaleX(0);
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
 }
 
 nav a:hover:after {
-    -webkit-transform: scaleX(0);
-    transform: scaleX(0);
-    width: 100%;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  width: 100%;
 }
 
 nav a:after {
-    bottom: .5vh;
-    width: 100%;
-    -webkit-transform: scaleX(0);
-    transform: scaleX(0);
+  bottom: 0.5vh;
+  width: 100%;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+}
+
+.current {
+  font-weight: bold !important;
 }
