--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -4,8 +4,6 @@
     alt="Ryan Ward headshot"
     class="avatar"
   />
-  <p>
-    Thanks for reading, and please leave some feedback if you have the time.
-  </p>
+  <p>Thanks for reading!</p>
   <p>Follow me on <a href="https://github.com/ryanward-io">Github</a>.</p>
 </div>
