--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,39 +53,8 @@
   ></script>
 
   <!-- Theme CSS -->
-  <link rel="stylesheet" href="{{ "/css/junior.css" | prepend: site.baseurl
-  }}?{{ site.time | date: "%Y%m%d%H%M" }}" type="text/css"> {% if page.tags
-  contains "resume" %}
-  <link
-    href="../css/cv-screen.css"
-    type="text/css"
-    rel="stylesheet"
-    media="screen"
-  />
-  <link
-    href="../css/cv-print.css"
-    type="text/css"
-    rel="stylesheet"
-    media="print"
-  />
-  <!-- imports -->
-  <link
-    rel="stylesheet"
-    href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
-  />
-  <link
-    href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700"
-    rel="stylesheet"
-    type="text/css"
-  />
-  {% endif %} {% if page.tags contains "projects" %} <link rel="stylesheet"
-  href="{{ "/css/projects.css" | prepend: site.baseurl }}?{{ site.time | date:
-  "%Y%m%d%H%M" }}" type="text/css">
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/emojione/3.0.3/extras/css/emojione.min.css"
-  />
-  {% endif %}
+  <link rel="stylesheet" href="{{ "{{ site.baseurl }}/css/junior.css"}}"
+  type="text/css">
 
   <!-- Fonts -->
   {% if site.extended_fonts %}
