--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -1,4 +1,3 @@
-
 .posts {
   margin: 0;
 }
@@ -11,7 +10,7 @@
 
 .posts .post:last-child {
   border-bottom: none;
-  margin-bottom: .375em;
+  margin-bottom: 0.375em;
   padding-bottom: 0;
 }
 
@@ -24,14 +23,14 @@
 .post-footer {
   @extend .italic;
 
-  margin-top: .75rem;
+  margin-top: 0.75rem;
   text-align: center;
 }
 
 .post-footer .avatar {
   margin: 2rem 0;
   width: 100px;
-  border-radius: 50%;
+  border-radius: 10%;
 }
 
 .meta,
@@ -39,7 +38,7 @@
   width: auto;
   font-weight: 300;
   margin: 0;
-  padding: .25em 0;
+  padding: 0.25em 0;
   color: #7a7a7a;
   font-style: italic;
 }
