Update footer email

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,9 +9,9 @@
     <div class="footer-each">
       <h5>
         <a href="mailto:ryan@fromlawtodata.com">
-          <span>ryan</span><br />
-          <span>@fromlaw</span><br />
-          <span>todata.com</span>
+          <span>wardyryan1</span><br />
+          <span>@gmai</span><br />
+          <span>l.com</span>
         </a>
       </h5>
     </div>
