Fixing up missed email

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,10 +8,9 @@
     </div>
     <div class="footer-each">
       <h5>
-        <a href="mailto:ryan@fromlawtodata.com">
+        <a href="mailto:wardyryan1@gmail.com">
           <span>wardyryan1</span><br />
-          <span>@gmai</span><br />
-          <span>l.com</span>
+          <span>@gmail.com</span>
         </a>
       </h5>
     </div>
