--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -9,7 +9,7 @@
     {% if site.stackoverflow_id %}
       <a class="fa fa-stack-overflow" href="https://stackoverflow.com/users/{{ site.stackoverflow_id }}"target="_blank"></a>
     {% endif %}
-    <a class="fa fa-rss" href="{{ "/feed.xml" | prepend: site.baseurl }}"target="_blank"></a>
+    <!-- <a class="fa fa-rss" href="{{ "/feed.xml" | prepend: site.baseurl }}"target="_blank"></a> -->
     {% if site.twitter_username %}
       <a class="fa fa-twitter" href="https://twitter.com/{{ site.twitter_username }}"target="_blank"></a>
     {% endif %}
